feat: Inertia.js v3 protocol parity - release 0.0.1
- once props with custom key and expiry (X-Inertia-Except-Once-Props)
- scroll props with X-Inertia-Infinite-Scroll-Merge-Intent (append/prepend)
- merge props: prependProps, deepMergeProps, matchPropsOn
- rescued props, page meta, clean serialization (null for empty metadata)
- header-based precognition (204/422) and prefetch detection
- CSRF on-by-default (inertia.csrf.enabled) with 419 on mismatch
- configurable root template, flash preserved on version mismatch
- remove VersionMismatchHandler, version 0.0.1